# emex64

./: .gitignore  CMakeLists.txt  README.md  emex64.nanorc
emex64asm/: CMakeLists.txt
emex64asm/src/: code.c  diag.c  emit.c  ir.c  label.c  main.c  section.c
emex64ld/src/: main.c
emex64lib/: CMakeLists.txt
emex64lib/include/emex64lib/asm/: code.h  driver.h  elf.h  emit.h  invocation.h  label.h  macro.h  opcode.h  options.h  register.h  section.h  type.h
emex64lib/include/emex64lib/c/: ASTUnit.h
emex64lib/include/emex64lib/linker/: elf.h  linker.h  obj.h  sym.h
emex64lib/include/emex64lib/support/: bitwalker.h  diag.h  file.h  keyboard.h  likely.h  parser.h
emex64lib/include/emex64lib/vm/: core.h  machine.h  memory.h  mmio.h  mmu.h  options.h
emex64lib/include/emex64lib/vm/device/: 8042.h  base.h  display.h  gpu.h  interrupt.h  mc.h  platform.h  rtc.h  timer.h  uart.h
emex64lib/include/emex64lib/vm/device/board/: ac97.h  display.h  uart.h
emex64lib/include/emex64lib/vm/device/board/controller/: 8042.h  power.h
emex64lib/include/emex64lib/vm/device/board/gfx/: vimmio.h
emex64lib/include/emex64lib/vm/device/internal/: rtc.h  timer.h
emex64lib/include/emex64lib/vm/device/internal/controller/: ic.h  interrupt.h  mem.h
emex64lib/include/emex64lib/vm/instruction/: alu.h  core.h  ctrl.h  data.h  instruction.h
emex64lib/src/: bitwalker.c  fdwalker.c  parser.c
emex64lib/src/asm/: code.c  diag.c  driver.c  emit.c  invocation.c  label.c  macro.c  opcode.c  options.c  register.c  section.c
emex64lib/src/c/: ASTUnit.c
emex64lib/src/support/: bitwalker.c  diag.c  fdwalker.c  file.c  keyboard.c  parser.c
emex64lib/src/vm/: core.c  machine.c  memory.c  mmio.c  mmu.c
emex64lib/src/vm/device/: 8042.c  display.c  display.m  interrupt.c  mc.c  platform.c  rtc.c  timer.c  uart.c  vimmiogfx.c
emex64lib/src/vm/device/board/: ac97.c  display.c  display.m  rtc.c  uart.c
emex64lib/src/vm/device/board/controller/: 8042.c  power.c
emex64lib/src/vm/device/board/gfx/: vimmio.c
emex64lib/src/vm/device/internal/: rtc.c  timer.c
emex64lib/src/vm/device/internal/controller/: ic.c  interrupt.c  mem.c
emex64lib/src/vm/instruction/: alu.c  core.c  ctrl.c  data.c
emex64vm/: CMakeLists.txt
emex64vm/src/: core.c  main.c  memory.c  mmio.c  mmu.c
emex64vm/src/device/: display.c  display.m  mc.c
emexutils/src/: parser.c
include/emex64asm/: diag.h  emit.h  ir.h  label.h  opcode.h  type.h
include/emex64vm/: core.h  memory.h  mmu.h
include/emex64vm/device/: display.h
include/emexutils/: parser.h
include/lautils/: object.h
lautils/: CMakeLists.txt
lautils/src/: object.c
tests/badapple/: Makefile
tests/badapple/src/: badapple.e64
tests/baminimal/: Makefile
tests/baminimal/src/: badapple.e64
tests/baspeed/src/: badapple.e64
tests/emex64OS/: Makefile
tests/emex64OS/src/: gui.e64  start.e64
tests/emexFirmware/: Makefile
tests/emexFirmware/inc/: 8042.e64inc  ac97.e64inc  display.e64inc  emex64.e64inc  interrupt.e64inc  mc.e64h  mc.e64inc  mm.e64inc  platform.e64inc  regs.e64inc  rtc.e64inc  timer.e64inc  uart.e64inc
tests/emexFirmware/src/: ac97.e64  exc.e64  font.e64  gui.e64  interrupt.e64  logo.raw  mc.e64  mem.e64  pmm.e64  put.e64  rtc.e64  slab.e64  start.e64  string.e64  uart.e64
tests/hello/: Makefile
tests/hello/src/: start.e64
